# MESW

./: .gitignore  book.txt  concurrency_test.py  convert.py  datagen.py  dirwalk.py  download.py  downloader.py  graph.py  main.py  main2.py  main3.py  main4.py  main5.py  neo4j_setup.txt  plot.py  power_systems_qa_dataset.csv  pyproject.toml  query.py  text.py
graph_rag_cache/: entity_contexts.json  entity_definitions.json  graph_chunk_entity_relation.graphml  graph_terms.json  kv_store_community_reports.json  kv_store_full_docs.json  kv_store_text_chunks.json  processing_stats.json  vdb_entities.json
graph_rag_cache_small/: entity_contexts.json  entity_definitions.json  graph_chunk_entity_relation.graphml  kv_store_community_reports.json  kv_store_full_docs.json  kv_store_text_chunks.json  processing_stats.json  vdb_entities.json
ja-wikipedia/: processed_pages.json
ja-wikipedia/wikipedia_dataset/: 0002.md  0004.md  0011.md  0014.md  0016.md  0017.md  0018.md  0020.md  0025.md  0026.md  0028.md  0029.md  0036.md  0039.md  0040.md  0044.md  0045.md  0048.md  0049.md  0053.md  0054.md  0060.md  0062.md  0063.md  0070.md  0074.md  0075.md  0077.md  0079.md  0082.md  0083.md  0086.md  0087.md  0091.md  0097.md  0098.md  0100.md  0101.md  0102.md  0103.md  (+2319 more)
ja-wikipedia/wikipedia_dataset_small/: 0005.md  0006.md  0008.md  0009.md  0010.md  0013.md  0015.md  0021.md  0022.md  0023.md  0024.md  0027.md  0032.md  0033.md  0034.md  0035.md  0038.md  0042.md  (+28 more)
parse/: extracted_data.json  output_simple.md  parse.py  parse_legacy.py  test_doc.json  test_doc.md  to_md.py
