[project]
name = "mesw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "accelerate>=1.8.1",
    "docling>=2.54.0",
    "black>=25.9.0",
    "isort>=6.0.1",
    "faiss-gpu-cu12>=1.12.0",
    "networkx>=3.4.2",
    "asyncio>=4.0.0",
    "aiohttp>=3.12.15",
    "plotly>=6.3.0",
    "sentence-transformers>=5.1.1",
    "ollama>=0.6.0",
    "nano-graphrag>=0.0.8.2",
    "vllm>=0.10.2",
    "nltk>=3.9.1",
    "scipy==1.12.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
